<resources>
    <string name="app_name">Vape Art</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">password</string>
    <string name="password_field">Password field</string>
    <string name="email">email</string>
    <string name="email_field">Email field</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="do_not_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="wish_list">wish list</string>
    <string name="basket">Basket</string>
    <string name="search">search</string>
    <string name="wrong_email">email is wrong</string>
    <string name="wrong_password">password must be greater than 6 characters</string>
    <string name="wrong_confirm_password">confirm password does not match</string>
    <string name="warning">Something went wrong</string>
    <string name="email_warning">There is no user with this email, please create an account</string>
    <string name="registration_is_successful">Registration was successful, please login</string>
    <string name="category">Categories</string>
    <string name="devices">Devices</string>
    <string name="disposable_devices">Disposable devices</string>
    <string name="atomizers">Atomizers</string>
    <string name="regular_liquids">Regular liquids</string>
    <string name="salt_nicotine_liquids">Salt nicotine liquids</string>
    <string name="cartridges_and_coils">Cartridges and coils</string>
    <string name="best_sellers">Best sellers</string>
    <string name="new_products">New products</string>
    <string name="discounts">Discounts</string>
    <string name="azn">AZN</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_from_whatsapp">Buy from WhatsApp</string>
    <string name="price">Price</string>
    <string name="item_added_to_cart">"Item added to cart"</string>
    <string name="install_whatsapp">"Please install WhatsApp"</string>
    <string name="whatsapp_message">"I want to buy this product: "</string>
    <string name="item_quantity_warning">"Item quantity must be greater than 0"</string>
    <string name="add_favorite_item">"Device is added to Wish list"</string>
    <string name="add_to_favorite_list">"Add to favorite list"</string>
    <string name="delete_favorite_item">"Device is deleted from Wish list"</string>
    <string name="favorite_button_text_true">"delete from wish list"</string>
    <string name="favorite_button_text_false">"add to wish list"</string>
    <string name="your_wish_list_is_empty">Your wish list is empty</string>
    <string name="your_cart_list_is_empty">Your cart is empty</string>
    <string name="search_did_not_give_any_results">Search didn\'t give any results</string>
    <string name="category_empty">There is no items in this category</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="add_item">Add item</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_all_items_from_cart_dialog_message">Are you sure you want to delete all items?</string>
    <string name="total_price">Total price</string>
    <string name="menu">Menu</string>
    <string name="call">Call</string>
    <string name="default_calculator_value">0</string>
    <string name="increase_items_quantity">Increase items quantity</string>
    <string name="reduce_items_quantity">Reduce items quantity</string>
    <string name="seller_phone">+994704030313</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
</resources>