<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.WishListFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/defaultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/your_cart_list_is_empty"
        style="@style/default_text_style"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clearAllCartButton"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:id="@+id/clearAllCartButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buyFromWhatsappButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"
        style="@style/clickable_button_style"
        android:background="@drawable/rounded_corners">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:text="@string/delete_all_items"
            android:textColor="@color/my_brown"
            style="@style/button_text_style1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buyFromWhatsappButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        style="@style/clickable_button_style">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@drawable/whatsapp" />

        <TextView
            style="@style/button_text_style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/buy_from_whatsapp"
            android:textColor="@color/green" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/bottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buyFromWhatsappButton,clearAllCartButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>