<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.DetailsFragment">

    <ImageView
        android:id="@+id/brandImageView"
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        tools:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/categoryNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@id/brandImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        tools:text="device" />

    <TextView
        android:id="@+id/itemNameTextViewTop"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintStart_toEndOf="@id/brandImageView"
        app:layout_constraintTop_toBottomOf="@id/categoryNameTextView"
        tools:ignore="TextContrastCheck"
        tools:text="device name text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/addToCartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brandImageView"
        android:layout_marginBottom="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/itemImageView"
                android:layout_width="150dp"
                android:layout_height="275dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                tools:src="@drawable/rta"/>

            <ImageView
                android:id="@+id/addToFavoritesButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_favorite_unchecked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/itemImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/favorite_button_text_false"/>

            <TextView
                android:id="@+id/addToFavoriteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/addToFavoritesButton"
                app:layout_constraintStart_toStartOf="@id/addToFavoritesButton"
                app:layout_constraintTop_toBottomOf="@id/addToFavoritesButton"
                tools:ignore="SmallSp,TextContrastCheck"
                tools:text="add to favorites" />

            <TextView
                android:id="@+id/itemNameTextView"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/itemImageView"
                android:layout_marginTop="15dp"
                app:layout_constraintHorizontal_bias="0.1"
                style="@style/button_text_style1"
                android:ellipsize="end"
                android:lines="1" />

            <TextView
                android:id="@+id/price"
                style="@style/button_text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/oldPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/price"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                style="@style/old_price_text_style"
                tools:text="40.00"/>

            <TextView
                android:id="@+id/currencyTextView1"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                app:layout_constraintStart_toEndOf="@id/oldPriceTextView"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
                android:layout_marginTop="12dp"
                android:layout_marginStart="3dp"
                android:text="@string/azn"
                android:textStyle="bold"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/currentPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
                app:layout_constraintStart_toEndOf="@id/currencyTextView1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                style="@style/text_style1"
                tools:text="30.00"/>

            <TextView
                android:id="@+id/currencyTextView2"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                app:layout_constraintStart_toEndOf="@id/currentPriceTextView"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
                android:layout_marginTop="12dp"
                android:layout_marginStart="3dp"
                android:text="@string/azn"
                android:textStyle="bold"
                android:textColor="@color/my_orange"/>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentPriceTextView"
                android:layout_marginTop="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <androidx.constraintlayout.widget.Group
                android:id="@+id/priceGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="oldPriceTextView, currencyTextView1"
                android:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/addToCartCalculator"
        android:layout_width="150dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buyFromWhatsappButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/default_calculator_value" />

        <ImageButton
            android:id="@+id/appendItemButton"
            style="@style/clickable_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:background="@drawable/ic_add"
            android:contentDescription="@string/increase_items_quantity"
            android:textColor="@color/my_orange"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/removeItemButton"
            style="@style/clickable_button_style"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_remove"
            android:contentDescription="@string/reduce_items_quantity"
            android:textColor="@color/grey"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addToCartButton"
        style="@style/clickable_button_style"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/buyFromWhatsappButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addToCartCalculator"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_cart"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            style="@style/button_text_style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/my_orange"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buyFromWhatsappButton"
        style="@style/clickable_button_style"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corners2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:background="@drawable/whatsapp"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/button_text_style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/buy_from_whatsapp"
            android:textColor="@color/green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>